--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
       <!-- Навигация -->
       <nav class="site-nav">
         <ul class="nav-list list">
-          <li class="nav-link">
-            <a href="index.html" class="link">Студія</a>
+          <li class="nav-item">
+            <a href="index.html" class="nav-link link current-page">Студія</a>
           </li>
-          <li class="nav-link">
-            <a href="portfolio.html" class="link">Портфоліо</a>
+          <li class="nav-item">
+            <a href="portfolio.html" class="nav-link link">Портфоліо</a>
           </li>
-          <li class="nav-link">
-            <a href="" class="link">Контакти</a>
+          <li class="nav-item">
+            <a href="" class="nav-link link">Контакти</a>
           </li>
         </ul>
       </nav>
       <!-- Контакты -->
-      <ul class="contact-list list">
-        <li class="contact-item">
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+      <ul class="header-contact-list list">
+        <li class="header-contact-item">
+          <a href="mailto:info@devstudio.com" class="header-contact link">info@devstudio.com</a>
         </li>
-        <li class="contact-item">
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+        <li class="header-contact-item">
+          <a href="tel:+380961111111" class="header-contact link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -126,20 +126,20 @@
       <!-- Адрес и контакты -->
       <address class="footer-address">
         <ul class="footer-contact-list list">
-          <li class="contact-item">
+          <li class="footer-contact-item">
             <a
               href="https://goo.gl/maps/pj5dTkwZmLneym9N6"
               target="_blank"
               rel="noopener nofollow noreferrer"
-              class="link"
+              class="contact-address link"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li class="contact-item">
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          <li class="footer-contact-item">
+            <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a>
           </li>
-          <li class="contact-item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <li class="footer-contact-item">
+            <a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
